--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: #c04702;
+  height: 95vh;
+  width: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.content-container {
+  background: #bf393e;
+  height: 450px;
+  width: 750px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ground {
+  background: #be6a3b;
+  z-index: 100;
+  width: 750px;
+  height: 150px;
+  position: absolute;
+  top: 375px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.joke-card {
   color: white;
+  display: flex;
+  justify-content: center;
+  height: 125px;
+  align-items: center;
+  background: rgba(141, 77, 34);
+  margin-top: 13px;
 }
 
-.App-link {
-  color: #61dafb;
+.walker-face {
+  position: absolute;
+  animation: appear 5s ease-in;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.texas-sun {
+  position: aboslute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes appear {
+  0%{
+      opacity: 0;
+      transform: scale(.2)
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+      opacity: 1;
   }
 }
